--- a/04-MY451-tables.Rmd
+++ b/04-MY451-tables.Rmd
@@ -393,26 +393,26 @@ test statistic for this example are shown in Table
     $\chi^{2}$ is obtained by adding up the quantities
     $(f_{o}-f_{e})^{2}/f_{e}$ across all the cells of the table.
 
-  -------- ---------- --------- --------- --------------- --------------------- ---------------------------
-  Cell        Cell            \         \               \                     \                          
-  Sex       Attitude    $f_{o}$   $f_{e}$   $f_{o}-f_{e}$   $(f_{o}-f_{e})^{2}$   $(f_{o}-f_{e})^{2}/f_{e}$
-  Male         SA           160     160.4          $-0.4$                  0.16                       0.001
-  Male         A            439     477.6         $-38.6$               1489.96                       3.120
-  Male         0            187     186.6             0.4                  0.16                       0.001
-  Male         D            200     169.6            30.4                924.16                       5.449
-  Male         SD            41      32.9             8.1                 65.61                       1.994
-  Female       SA           206     205.6             0.4                  0.16                       0.001
-  Female       A            651     612.4            38.6               1489.96                       2.433
-  Female       0            239     239.4          $-0.4$                  0.16                       0.001
-  Female       D            187     217.4         $-30.4$                924.16                       4.251
-  Female       SD            34      42.1          $-8.1$                 65.61                       1.558
-              Sum          2344      2344               0                4960.1            $\chi^{2}=18.81$
-  -------- ---------- --------- --------- --------------- --------------------- ---------------------------
+-------- ---------- --------- --------- --------------- --------------------- ---------------------------
+Cell        Cell            \         \               \                     \                           \
+Sex       Attitude    $f_{o}$   $f_{e}$   $f_{o}-f_{e}$   $(f_{o}-f_{e})^{2}$   $(f_{o}-f_{e})^{2}/f_{e}$
+Male         SA           160     160.4          $-0.4$                  0.16                       0.001
+Male         A            439     477.6         $-38.6$               1489.96                       3.120
+Male         0            187     186.6             0.4                  0.16                       0.001
+Male         D            200     169.6            30.4                924.16                       5.449
+Male         SD            41      32.9             8.1                 65.61                       1.994
+Female       SA           206     205.6             0.4                  0.16                       0.001
+Female       A            651     612.4            38.6               1489.96                       2.433
+Female       0            239     239.4          $-0.4$                  0.16                       0.001
+Female       D            187     217.4         $-30.4$                924.16                       4.251
+Female       SD            34      42.1          $-8.1$                 65.61                       1.558
+            Sum          2344      2344               0                4960.1            $\chi^{2}=18.81$
+-------- ---------- --------- --------- --------------- --------------------- ---------------------------
 
-  : (\#tab:t-sex-attitude-chi2)Calculating the $\chi^{2}$ test statistic for Table
-  \@ref(tab:t-sex-attitude-ch4). In the second column, SA, A, 0, D, and SD
-  are abbreviations for Strongly agree, Agree, Neither agree nor
-  disagree, Disagree and Strongly disagree respectively.
+: (\#tab:t-sex-attitude-chi2)Calculating the $\chi^{2}$ test statistic for Table
+\@ref(tab:t-sex-attitude-ch4). In the second column, SA, A, 0, D, and SD
+are abbreviations for Strongly agree, Agree, Neither agree nor
+disagree, Disagree and Strongly disagree respectively.
 
 The calculations can be done even by hand, but we will usually leave
 them to a computer. The last column of Table \@ref(tab:t-sex-attitude-chi2)
